[gd_scene load_steps=30 format=3 uid="uid://bu8yrnqdinm34"]

[ext_resource type="Script" path="res://Scripts/green_ghost_enemy.gd" id="1_5bcda"]
[ext_resource type="Texture2D" uid="uid://bi8ddv01t2tx8" path="res://Sprites/Character Sprites/Enemies/Spooky ghost.png" id="1_m738f"]
[ext_resource type="PackedScene" uid="uid://berixba5mwjky" path="res://Scenes/killzone.tscn" id="3_uyy36"]
[ext_resource type="Script" path="res://Scripts/player_attacked.gd" id="4_6uxqe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3ujc3"]
atlas = ExtResource("1_m738f")
region = Rect2(80, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrrv7"]
atlas = ExtResource("1_m738f")
region = Rect2(96, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq84r"]
atlas = ExtResource("1_m738f")
region = Rect2(112, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3ill"]
atlas = ExtResource("1_m738f")
region = Rect2(128, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd5mp"]
atlas = ExtResource("1_m738f")
region = Rect2(144, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0aeo"]
atlas = ExtResource("1_m738f")
region = Rect2(160, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuomk"]
atlas = ExtResource("1_m738f")
region = Rect2(176, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygdv8"]
atlas = ExtResource("1_m738f")
region = Rect2(192, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3qrm"]
atlas = ExtResource("1_m738f")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_01ln7"]
atlas = ExtResource("1_m738f")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8r7v"]
atlas = ExtResource("1_m738f")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq6qo"]
atlas = ExtResource("1_m738f")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpyf4"]
atlas = ExtResource("1_m738f")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp435"]
atlas = ExtResource("1_m738f")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg8lm"]
atlas = ExtResource("1_m738f")
region = Rect2(96, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yejfc"]
atlas = ExtResource("1_m738f")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_76xno"]
atlas = ExtResource("1_m738f")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_swc3p"]
atlas = ExtResource("1_m738f")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7c4"]
atlas = ExtResource("1_m738f")
region = Rect2(48, 96, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pkh57"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ujc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrrv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq84r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3ill")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd5mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0aeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuomk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygdv8")
}],
"loop": true,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3qrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01ln7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8r7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq6qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpyf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp435")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg8lm")
}],
"loop": true,
"name": &"ghost",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yejfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76xno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swc3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7c4")
}],
"loop": false,
"name": &"ouch",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6xmia"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_tw846"]
radius = 115.004

[sub_resource type="CircleShape2D" id="CircleShape2D_s6lqk"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mbbjx"]
radius = 2.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_nhi0x"]
vertices = PackedVector2Array(6, 5, -7, 5, -7, -8, 6, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -9, 7, -9, 7, 6, -8, 6)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 1.0

[node name="Ghost" type="CharacterBody2D"]
script = ExtResource("1_5bcda")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = -1
sprite_frames = SubResource("SpriteFrames_pkh57")
animation = &"ghost"
autoplay = "ghost"
frame_progress = 0.032346

[node name="killzone" parent="." instance=ExtResource("3_uyy36")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_6xmia")

[node name="player_detection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
shape = SubResource("CircleShape2D_tw846")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 100.0
max_neighbors = 5

[node name="been_hit" type="Timer" parent="."]
wait_time = 0.2

[node name="death_animation" type="Timer" parent="."]
wait_time = 0.75

[node name="player_attacked?" type="Area2D" parent="." groups=["enemies"]]
visible = false
script = ExtResource("4_6uxqe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_attacked?"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_s6lqk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_mbbjx")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
navigation_polygon = SubResource("NavigationPolygon_nhi0x")

[connection signal="body_entered" from="player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="timeout" from="been_hit" to="." method="_on_been_hit_timeout"]
[connection signal="timeout" from="death_animation" to="." method="_on_death_animation_timeout"]
